# rust_motion_extractor

./: Cargo.toml  README.md
src/: build.rs  main.rs
