[package]
name = "motion_extraction"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
image = { version = "0.24.7", default-features = false }
nokhwa = { version = "0.10.4", features = ["input-native"] }
rayon = "1.8.0"
show-image = "0.13.1"

[build-dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
winres = "0.1.12"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
